@@ -1,4 +1,5 @@
 v0.2.26 (05/20/2024) :
+	  - Added 256Kb ROM support (SuperGame256)
     - Added EXFIX bankswitching scheme support
     - Implemented gfx grouping based on prefix
     - Bug fix in const unsigned int arrays generation
